# youtube

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  OWNERS  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: auto-merge.yml  ci.yml  labeler.yml  stale.yml
.sisyphus/drafts/: validation-and-setup.md  youtube-automation-impl.md  youtube-oauth-cli.md
config/: __init__.py  settings.py
deploy/ffmpeg-worker/: AGENTS.md  README.md  deploy.sh  ffmpeg-worker.service  main.py  requirements.txt
docs/: youtube-setup.md
n8n/: credentials-setup.md  supabase-schema.sql
n8n/workflows/: ffmpeg-worker-api.md  youtube-facts-channel.json  youtube-finance-channel.json  youtube-horror-channel.json
src/: __init__.py  cli.py
src/channels/: AGENTS.md  __init__.py
src/channels/facts/: __init__.py  pipeline.py  prompts.py
src/channels/finance/: __init__.py  pipeline.py  prompts.py
src/channels/horror/: __init__.py  pipeline.py  prompts.py
src/core/: AGENTS.md  __init__.py  exceptions.py  interfaces.py  models.py  orchestrator.py
src/services/: AGENTS.md  __init__.py
src/services/llm/: __init__.py  client.py  script_generator.py
src/services/thumbnail/: __init__.py  generator.py  styles.py
src/services/tts/: __init__.py  edge_tts.py  elevenlabs.py  engine.py
src/services/video/: __init__.py  composer.py  music.py  subtitles.py
src/services/visual/: __init__.py  image_generator.py  video_generator.py
src/services/youtube/: __init__.py  auth.py  seo.py  uploader.py
tests/: conftest.py  test_dry_run.py  test_orchestrator.py
tests/services/: test_tts_engine.py
