[project]
name = "youtube-automation"
version = "0.1.0"
description = "AI-powered Faceless YouTube Channel Automation System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jclee" }]

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "structlog>=23.2.0",
    
    # LLM Clients
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    
    # TTS
    "elevenlabs>=1.0.0",
    "edge-tts>=6.1.0",
    
    # Image Generation
    "replicate>=0.25.0",  # For Midjourney-like models
    
    # Video Processing
    "ffmpeg-python>=0.2.0",
    "moviepy>=1.0.3",
    "Pillow>=10.2.0",
    
    # Audio Processing (used by TTS engines)
    "pydub>=0.25.1",
    "mutagen>=1.47.0",
    
    # YouTube API
    "google-api-python-client>=2.118.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    
    # Music Generation
    "requests>=2.31.0",
    
    # Utils
    "rich>=13.7.0",
    "typer>=0.9.0",
    "schedule>=1.2.0",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
ytauto = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "B904", "SIM102", "SIM117"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
no_implicit_optional = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
reportMissingImports = false
reportMissingModuleSource = false
